# NeuralNetwork

./: .gitignore  Cargo.toml  Makefile  README.md  my_torch_network.nn  predict_analizer.py
.github/workflows/: basic_checks.yaml  mirror.yaml  run_tests.yaml
configs/: my.conf
src/: lib.rs  main.rs  parseConfig.rs  parse_config.rs
src/chess/: config.rs  fen.rs  mod.rs  predictor.rs  trainer.rs
src/network/: layer.rs  mod.rs
src/network/datastruct/: layer.rs  mod.rs  network.rs  perceptron.rs  trait.rs
