[package]
name = "my_torch_analyzer"
version = "0.1.0"
edition = "2021"

[lib]
name = "my_torch_analyzer"
path = "src/lib.rs"

[[bin]]
name = "my_torch_analyzer"
path = "src/main.rs"

[[bin]]
name = "my_torch_generator"
path = "src/bin/my_torch_generator.rs"

[dependencies]
rand = "0.8"
rand_distr = "0.4"
rayon = "1.8"
